feat: add DeepL provider (experimental)
- Add DeepL translation provider with API key support (config or DEEPL_API_KEY env)
- Auto-detect Free/Pro endpoint by key suffix (:fx)
- Add formality option (default, more, less, prefer_more, prefer_less)
- Add automatic fallback to Google Translate when API key is missing
- Update README with DeepL configuration and setup guide
- Update CHANGELOG with new features

Note: DeepL provider is experimental and needs testing

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,9 +1,11 @@
 {
   "runtime": {
-    "version": "LuaJIT"
+    "version": "LuaJIT",
+    "pathStrict": true
   },
   "diagnostics": {
-    "globals": ["vim"]
+    "globals": ["vim"],
+    "disable": ["missing-fields"]
   },
   "workspace": {
     "library": [
@@ -11,5 +13,18 @@
       "${3rd}/luv/library"
     ],
     "checkThirdParty": false
+  },
+  "hint": {
+    "enable": true,
+    "setType": true,
+    "paramName": "All",
+    "paramType": true,
+    "arrayIndex": "Enable"
+  },
+  "completion": {
+    "callSnippet": "Replace"
+  },
+  "type": {
+    "castNumberToInteger": true
   }
 }
